--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -13,6 +13,7 @@ input:focus.error, textarea:focus.error, selecr:focus.error{border:1px solid #ff
 .link{color: #0c84d1 !important;cursor:pointer;}
 .nav-logo-brand{}
 .main-menu #main-menu-navigation .is-shown{max-height: 100%;}
+.i-sort{padding-left: 2px;cursor: pointer;}
 
 ul.navigation-main li.division{margin: 14px 0 26px 0;}
 ul.navigation-main li.division hr{color: white;border-color: #f2f2f2;border-style: dashed;opacity: 0.5;}
@@ -20,9 +21,6 @@ ul.navigation-main li.nav-buttons{background-color: #a7afbe;margin-bottom: 2px;b
 ul.navigation-main li.nav-buttons:hover{background-color: #a7afbe;margin-bottom: 2px;border-right: 5px solid #FC9148;}
 ul.navigation-main li.nav-buttons a{color:white !important;border-radius: 0;text-transform: uppercase;font-weight: bold;text-align: left;}
 
-.icon-top-pdv{background-color: white;padding: 5px;opacity: 0.8;margin-top: -11px;cursor: pointer;}
-.icon-top-pdv:hover{opacity: 1;}
-.btn-default-magali{background-color: #d9d9d9;}
 .text-align-left{text-align: left !important;}
 .text-align-center{text-align: center !important;}
 .text-align-right{text-align: right !important;}
